[bugfix] Tab: animated overflow

--- a/packages/tabs/index.less
+++ b/packages/tabs/index.less
@@ -125,6 +125,12 @@
     will-change: left;
   }
 
+  &__content {
+    &--animated {
+      overflow: hidden;
+    }
+  }
+
   &--line {
     padding-top: @tabs-line-height;
 
